bugfix tests